[package]
name    = "pbbs"
version = "0.1.0"
edition.workspace = true

[dependencies]
clap.workspace = true
rayon.workspace = true
num-traits.workspace = true
affinity = "0.1.2"
crossbeam   = "0.8.2"
parlay  = { path = "../parlay/" }
enhanced_rayon  = { path = "../enhanced_rayon/" }

[features]
default = ["mem_safe", "rng_ind_safe", "sng_ind_safe", "AW_safe"]

synchronized = ["mem_safe", "rng_ind_safe", "sng_ind_atomic", "AW_safe"]
interior_unsafe = ["mem_safe", "rng_ind_safe", "sng_ind_safe"]
unsafe = ["mem_safe", "rng_ind_safe", "sng_ind_unsafe"]

rng_ind_safe = ["enhanced_rayon/rng_ind_safe", "parlay/rng_ind_safe"]
sng_ind_safe = ["enhanced_rayon/sng_ind_safe", "parlay/sng_ind_safe"]
sng_ind_unsafe = ["enhanced_rayon/sng_ind_unsafe", "parlay/sng_ind_unsafe"]
sng_ind_atomic = ["enhanced_rayon/sng_ind_unsafe", "parlay/sng_ind_unsafe"]
AW_safe = ["parlay/AW_safe"]
mem_safe = ["parlay/mem_safe"]


# MIS
[[bin]]
name    = "mis"
path    = "src/benchmarks/maximal_independent_set/mis_time.rs"
test    = false

# MM
[[bin]]
name    = "mm"
path    = "src/benchmarks/maximal_matching/mm_time.rs"
test    = false

# ISort
[[bin]]
name    = "isort"
path    = "src/benchmarks/integer_sort/isort_time.rs"
test    = false

# SF
[[bin]]
name    = "sf"
path    = "src/benchmarks/spanning_forest/sf_time.rs"
test    = false

# MSF
[[bin]]
name    = "msf"
path    = "src/benchmarks/min_span_forest/msf_time.rs"
test    = false

# Sort
[[bin]]
name    = "sort"
path    = "src/benchmarks/comparison_sort/sort_time.rs"
test    = false

# BWDecode
[[bin]]
name    = "bw"
path    = "src/benchmarks/bw_decode/bw_time.rs"
test    = false

# SuffixArray
[[bin]]
name    = "sa"
path    = "src/benchmarks/suffix_array/sa_time.rs"
test    = false

# RemoveDuplicates
[[bin]]
name    = "dedup"
path    = "src/benchmarks/remove_duplicates/dedup_time.rs"
test    = false

# Histogram
[[bin]]
name    = "hist"
path    = "src/benchmarks/histogram/hist_time.rs"
test    = false

# LongestRepeatedSubString
[[bin]]
name    = "lrs"
path    = "src/benchmarks/longest_repeated_sub_string/lrs_time.rs"
test    = false

# DelaunayRefinement
[[bin]]
name    = "dr"
path    = "src/benchmarks/delaunay_refine/dr_time.rs"
test    = false

# NearestNeighbors
[[bin]]
name    = "knn"
path    = "src/benchmarks/nearest_neighbors/knn_time.rs"
test    = false

# BreadthFirstSearch
[[bin]]
name    = "bfs"
path    = "src/benchmarks/bfs/bfs_time.rs"
test    = false
